--- a/package.json
+++ b/package.json
@@ -52,14 +52,13 @@
     "get-version": "node -p process.env.npm_package_version",
     "set-version": "scripts/set-version.sh",
     "test": "scripts/test.sh",
-    "package": "npm ci --ignore-scripts && prebuild",
     "install": "prebuild-install -r napi || cmake-js build",
-    "rebuild": "npm run rebuild-changes",
-    "build": "npm run build-changes",
-    "build:arm": "npm run build-changes:arm",
-    "build-changes": "cmake-js build --debug",
-    "build-changes:arm": "NODE_ARCH_ARM=1 cmake-js build --debug",
-    "rebuild-changes": "cmake-js rebuild --debug && cd tests && npm install",
+    "rebuild": "cmake-js rebuild --debug && cd tests && npm install",
+    "build": "cmake-js build --debug",
+    "build:arm": "NODE_ARCH_ARM=1 cmake-js build --debug",
+    "prebuild:android": "node scripts/build-android.js",
+    "prebuild:ios": "scripts/build-ios.sh",
+    "prebuild:node": "prebuild",
     "license-check": "npm install && license-checker --exclude \"MIT,ISC,BSD,Apache-2.0,BSD-2-Clause,BSD-3-Clause,WTFPL,Unlicense,(MIT AND CC-BY-3.0)\" | node scripts/handle-license-check.js",
     "jsdoc:clean": "rimraf ./docs/output",
     "jsdoc": "npm install --ignore-scripts && npm run jsdoc:clean && jsdoc -u docs/tutorials -p package.json -c docs/conf.json",
